--- a/data/index.html
+++ b/data/index.html
@@ -1,18 +1,68 @@
 <html>
     <head>
-        <title>InStorm - Beta</title>
+        <title>InStorm α</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="data:,">
         <link href="pure.min.css" rel="stylesheet" type="text/css">
+        <script src="Chart.min.js"></script>
     </head>
     <body>
         <section class="section">
-            <h1 class="title is-3">InStorm α</h1>
+            <nav class="navbar">
+                <a class="navbar-item">
+                    <h1 class="title is-3">InStorm α / Stats</h1>
+                </a>
+            </nav>
+            <br>
             <div class="container is-fluid">
                 <div class="notification is-warning" >
-                Warning! This device is still in it's alpha-phase! High cats ahead!
+                Warning! This device is still in development! High cats ahead!
                 </div>
             </div>
-        </section>    
+        </section>
+        <section class="section">
+            <div class="tile is-ancestor">
+                <div class="tile is-4 is-vertical is-parent">
+                  <article class="tile is-child box">
+                        <p class="title">Status</p>
+                        <div class="notification is-success">
+                            <p class="title is-size-2">Online</p>
+                        </div>
+                  </article>
+                  <article class="tile is-child box">
+                        <p class="title">Neighbours</p>
+                        <div class="notification has-background-black has-text-white">
+                            <p class="title is-size-2">25</p>
+                        </div>
+                  </article>
+                </div>
+                <div class="tile is-parent">
+                  <div class="tile is-child box">
+                    <p class="title is-family-monospace">ping gateway.storm</p>
+                    <div><canvas id="chart_1"></canvas></div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <script>
+            var ctx = document.getElementById('chart_1').getContext('2d');
+            var chart = new Chart(ctx, {
+                // The type of chart we want to create
+                type: 'line',
+                cubicInterpolationMode: "monotone",
+
+                // The data for our dataset
+                data: {
+                    labels: ['T+00', 'T+05', 'T+10', 'T+15', 'T+20', 'T+25', 'T+30', 'T+35', 'T+40', 'T+45', 'T+50', 'T+55', 'T+60'],
+                    datasets: [{
+                        borderColor: 'rgb(195, 95, 232)',
+                        data: [0, 100, 70, 100, 110, 120, 100, 60, 100, 70, 100, 110, 120, 100, /* It's a crutch, but OK. FIXME (MaxVal Set) -> */ 400]
+                    }]
+                },
+
+                // Configuration options go here
+                options: {}
+            });
+        </script>    
     </body>
 </html>
