Some slight changes in design

--- a/data/index.html
+++ b/data/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>InStorm α</title>
+        <title>InStorm Alpha</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="data:,">
         <link href="pure.min.css" rel="stylesheet" type="text/css">
@@ -8,15 +8,25 @@
     </head>
     <body>
         <section class="section">
-            <nav class="navbar">
-                <a class="navbar-item">
-                    <h1 class="title is-3">InStorm α / Stats</h1>
-                </a>
+            <nav class="level">
+                <div class="level-item">
+                    <h1 class="title is-3" style="margin-top: 5pt;">InStorm Alpha</h1>
+                </div>
+
+                <div class="level-item columns">
+                    <a href="sos" class="button is-warning is-medium" style="margin-right: 10pt; margin-top: 5pt;">
+                        Сообщить о задержании
+                    </a>
+                    
+                    <a href="warning" class="button is-danger is-medium" style="margin-top: 5pt;">
+                        SOS
+                    </a>
+                </div>
             </nav>
             <br>
             <div class="container is-fluid">
                 <div class="notification is-warning" >
-                Warning! This device is still in development! High cats ahead!
+                    Внимание! Проект все еще в разработке! Возможно падение ежиков с неба!
                 </div>
             </div>
         </section>
@@ -24,13 +34,13 @@
             <div class="tile is-ancestor">
                 <div class="tile is-4 is-vertical is-parent">
                   <article class="tile is-child box">
-                        <p class="title">Status</p>
+                        <p class="title">Статус</p>
                         <div class="notification is-success">
-                            <p class="title is-size-2">Online</p>
+                            <p class="title is-size-2">В сети</p>
                         </div>
                   </article>
                   <article class="tile is-child box">
-                        <p class="title">Neighbours</p>
+                        <p class="title">Соседи</p>
                         <div class="notification has-background-black has-text-white">
                             <p class="title is-size-2">25</p>
                         </div>
